--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,71 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.InfoBarLinks{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  margin-top: 8%;
+  margin-left: 8%;
+  margin-right: 8%;
+  /* width: 100%; */
+}
+
+.CVItemClass{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+  margin: 1rem;
+  padding: 2rem 2rem;
+  text-align: center;
+}
+
+.list-item {
+
+  padding: 0;
+  list-style-position: inside;
+  text-align: left;
+  width: 100%;
+}
+
+.WhatdDoIdo {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.WhatdDoIdo ul {
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.CVItemText{
+  margin-left: 10%;
+  text-align: left;
 }
+
+.dataTitle{
+  font-weight: 1000;
+}
+
+.dataTime{
+  font-weight: 200;
+  margin-bottom: 20px;
+}
+
+
+
+
+
+.SmallCVLeft {
+  text-align: left;
+}
+
+.SmallCVRight {
+  text-align: right;
+}
+
+.Smallimg{
+  width: 23.99px;
+}
+
+
