--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 110%;
+}
+
+.AppWrapper {
+  background: linear-gradient(180deg, rgba(97, 183, 244, 0.3) 0%, rgba(231, 34, 12, 0.5) 100%);
+  min-height: 100vh;
+  width: 100%;
+  height: 100%;
+}
+
 .App {
   text-align: center;
 }
@@ -8,7 +21,10 @@
   margin-top: 8%;
   margin-left: 8%;
   margin-right: 8%;
-  /* width: 100%; */
+}
+
+.StartHeaderTop{
+  margin-top: 0px;
 }
 
 .CVItemClass{
@@ -44,6 +60,25 @@
   text-align: left;
 }
 
+.AlignRow {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  align-items: flex-start; /* Add this line */
+}
+
+.CVItemImage {
+  margin-left: auto; /* Add this line */
+  margin-right: 20%;
+}
+
+
+
+.AllCVJobsBigList {
+  list-style-type: none;
+  padding: 0;
+}
+
 .dataTitle{
   font-weight: 1000;
 }
@@ -51,6 +86,14 @@
 .dataTime{
   font-weight: 200;
   margin-bottom: 20px;
+}
+
+
+/* TODO change depending on screen size */
+.ImageLinkElement{
+  width:23.99px;
+  height:23.99px;
+  margin-top: 20px;
 }
 
 
@@ -69,4 +112,12 @@
   width: 23.99px;
 }
 
+.Mediumimg{
+  width: 10%;
+  position: absolute;
+  right: 10%;
+  top: 2%;
+  border-radius: 50px;
+
+}
 
