--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,10 @@ html, body {
   height: 110%;
 }
 
+/* background: linear-gradient(180deg, rgba(97, 183, 244, 0.3) 0%, rgba(231, 34, 12, 0.5) 100%); */
+
 .AppWrapper {
-  background: linear-gradient(180deg, rgba(97, 183, 244, 0.3) 0%, rgba(231, 34, 12, 0.5) 100%);
+  background: linear-gradient(180deg, rgba(4, 255, 8, 0.3) 0%, rgba(225, 0, 255, 0.908) 100%);
   min-height: 100vh;
   width: 100%;
   height: 100%;
@@ -15,12 +17,18 @@ html, body {
   text-align: center;
 }
 
-.InfoBarLinks{
+.InfoBarLinks {
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* Change from space-between to center */
+  align-items: center; /* Add this line */
   margin-top: 8%;
-  margin-left: 8%;
-  margin-right: 8%;
+  gap: 10rem; /* Add this line to control the spacing between items */
+}
+
+.info-bar-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .StartHeaderTop{
@@ -87,6 +95,79 @@ html, body {
   font-weight: 200;
   margin-bottom: 20px;
 }
+
+.all-skill-lists {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center; /* Add this line */
+  gap: 1rem; /* Add this line */
+  margin-top: 80px;
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-bottom: 80px;
+}
+
+
+.floating-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 60%;
+  border-color: rgb(228, 52, 33);
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.floating-item {
+  background-color: #f3f3f3;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  font-weight: bold;
+}
+
+
+
+.floating-list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* width: 100%; Add this line */
+  box-sizing: border-box; /* Add this line */
+}
+
+.floating-list-title {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 768px) {
+  .floating-list {
+    width: 100%;
+  }
+  .floating-list-container {
+    width: 60%; /* Adjust this value as needed */
+  }
+
+  .all-skill-lists {
+    justify-content: center;
+    align-items: center; /* Add this line */
+    gap: 1rem; /* Add this line */
+    margin-top: 8%;
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-bottom: 50px;
+  }
+
+  .InfoBarLinks {
+    gap: 2rem; /* Add this line to control the spacing between items */
+  }
+}
+
+
+
 
 
 /* TODO change depending on screen size */
