--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
+/*   background: linear-gradient(180deg, rgba(4, 255, 8, 0.3) 0%, rgba(212, 60, 233, 0.908) 100%); */
 .AppWrapper {
-  background: linear-gradient(180deg, rgba(4, 255, 8, 0.3) 0%, rgba(225, 0, 255, 0.908) 100%);
+  background: linear-gradient(180deg, rgba(4, 255, 8, 0.3) 0%, rgba(86, 107, 200, 0.908) 100%);
   min-height: 100vh;
   width: 100%;
   height: 100%;
@@ -98,7 +98,7 @@ html, body {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center; /* Add this line */
-  gap: 1rem; /* Add this line */
+  gap: 0.5rem; /* Add this line */
   margin-top: 80px;
   margin-left: 8%;
   margin-right: 8%;
@@ -110,7 +110,7 @@ html, body {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  width: 60%;
+  width: 55%;
   border-color: rgb(228, 52, 33);
   align-items: center;
   justify-content: center;
